# spbu_papers_maps

./: .gitignore  README.md  pyproject.toml
data/: bids_panel_final_ds.csv  brick deal.csv  brick_deal_clean.csv  data_for_pred_int.csv  data_for_pred_int_260121.csv  deals_panel_final_ds.csv  deals_quarter_metrics.csv  panel deal.csv  petrogradskiy_1703-1969.csv  petrogradskiy_1970-2025.csv  quarter_cad_numbers.csv  quarter_centroids_260121.csv  sale_78_filtered.csv
geojsons/: 78_filtered.geojson
maps/: bids_map.html  bids_map_layers.html  brick_deal_median_bw_1964_1972.html  brick_deal_median_map.html  deals_median_map.html  deals_median_only.html  deals_median_with_bids.html  petro_prices_1703_1969.html  petro_prices_1970_2025.html
scripts/: build_bids_map.py  build_brick_median_map.py  build_brick_median_map_filtered.py  build_deals_bids_map.py  build_deals_median_bids.py  build_deals_median_map.py  build_deals_median_only.py  build_petro_maps.py  quick_map.py
src/spbu_maps/: __init__.py  data_io.py  mapping.py  paths.py
tests/: test_data_io.py  test_paths.py
