[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spbu-maps"
version = "0.1.0"
description = "Utilities for preparing research-ready maps based on SPbU data."
readme = "README.md"
authors = [{name = "Research Mapping Team"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "matplotlib>=3.8",
  "folium>=0.15",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "black>=24.3",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
